@@ -1,3 +1,9 @@
+2001-05-21  Kevin Buettner  <kevinb@redhat.com>
+
+	* gdb.base/finish.exp (finish_void): Allow "finish" command to
+	stop on the call statement as well as the statement after the
+	call.
+
 2001-05-10  Elena Zannoni  <ezannoni@redhat.com>
 
         * gdb.base/completion.exp: Revamp test. Make it execute on all
